--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -118,6 +118,7 @@
     owner: "{{ item.username }}"
     group: "{{ item.username }}"
     mode: "0777"
+  register: omf_installer_download
   tags:
     - fish
     - omf
@@ -133,6 +134,8 @@
     owner: "{{ item.username }}"
     group: "{{ item.username }}"
     mode: 0755
+  register: omf_installer_copy
+  when: omf_installer_download is succeeded
   tags:
     - fish
     - omf
@@ -143,11 +146,12 @@
   become: true
   become_user: "{{ item.username }}"
   timeout: 30
-  shell: "./install --noninteractive --yes"
+  command: "./install --noninteractive --yes"
   args:
     executable: /usr/bin/fish
     chdir: "{{ item.home_path }}"
-  register: installomf
+  register: install_omf
+  when: omf_installer_copy is succeeded
   tags:
     - fish
     - omf
@@ -169,11 +173,11 @@
   become: true
   become_user: "{{ item.username }}"
   timeout: 30
-  shell: omf install bobthefish
+  command: omf install bobthefish
   args:
     executable: /usr/bin/fish
     chdir: "{{ item.home_path }}"
-  when: installomf is succeeded
+  when: install_omf is succeeded
   tags:
     - fish
     - omf
@@ -187,6 +191,7 @@
     single_branch: true
     version: master
     depth: 1
+  register: clone_ultimate_vim
   tags:
     - shell
     - vim
@@ -200,6 +205,8 @@
     dest: "{{ item.home_path }}"
     owner: "{{ item.username }}"
     group: "{{ item.username }}"
+    mode: 0644
+  when: clone_ultimate_vim is succeeded
   tags:
     - shell
     - vim
@@ -209,10 +216,11 @@
   become: true
   become_user: "{{ item.username }}"
   timeout: 30
-  shell: sh .vim_runtime/install_awesome_vimrc.sh
+  command: "sh .vim_runtime/install_awesome_vimrc.sh"
   args:
     chdir: "{{ item.home_path }}"
   register: ultimate_vim
+  when: clone_ultimate_vim is succeeded
   tags:
     - shell
     - vim
@@ -226,7 +234,7 @@
     owner: "{{ item.username }}"
     group: "{{ item.username }}"
     mode: "0644"
-  when: ultimate_vim is not skipped
+  when: ultimate_vim is not skipped and ultimate_vim is succeeded
   tags:
     - vim
     - shell
