--- a/meta/main.yml
+++ b/meta/main.yml
@@ -5,7 +5,7 @@ galaxy_info:
   author: Scott Harwell
   description: Sets up servers with Fish shell, Fish shell themes, VIM configuration, and a NeoFetch display at login.
   license: MIT
-  min_ansible_version: 2.1
+  min_ansible_version: 2.8
 
   platforms:
     - name: ArchLinux
@@ -13,16 +13,24 @@ galaxy_info:
         - all
     - name: Debian
       versions:
-        - all
+        - buster
+        - bullseye
     - name: EL
       versions:
         - 8
     - name: Fedora
       versions:
-        - all
+        - 28
+        - 29
+        - 30
+        - 31
+        - 32
+        - 33
+        - 34
     - name: Ubuntu
       versions:
-        - all
+        - focal
+        - bionic
 
   galaxy_tags:
     - development
