--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -14,6 +14,16 @@
     - yum
     - dnf
 
+- name: Download ELEL RPM key
+  become: true
+  ansible.builtin.rpm_key:
+    state: present
+    key: http://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-8
+  when: ansible_facts['distribution'] == "RedHat" or ansible_facts['distribution'] == "Rocky" or ansible_facts['distribution'] == "CentOS"
+  tags:
+    - yum
+    - dnf
+
 - name: Enable EPEL Repo Oracle Linux
   become: true
   yum_repository:
