--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -134,7 +134,7 @@
   become: true
   become_user: "{{ item.username }}"
   timeout: 30
-  command: "./install --noninteractive --yes"
+  shell: "./install --noninteractive --yes"
   args:
     executable: /usr/bin/fish
     chdir: "{{ item.home_path }}"
