--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -40,3 +40,14 @@
 - name: Remove dependencies that are no longer required
   apt:
     autoremove: true
+
+- name: Allow 'sudo' group to have passwordless sudo
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: "^%sudo"
+    line: "%sudo ALL=(ALL) NOPASSWD: ALL"
+    validate: "visudo -cf %s"
+  when: passwordless_admin
+  tags:
+    - groups
