--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -28,3 +28,14 @@
   community.general.pacman:
     name: open-iscsi
     state: present
+
+- name: Allow 'wheel' group to have passwordless sudo
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: "^%wheel"
+    line: "%wheel ALL=(ALL) NOPASSWD: ALL"
+    validate: "visudo -cf %s"
+  when: passwordless_admin
+  tags:
+    - groups
