Further idempotence improvements with users and groups.

--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -30,6 +30,7 @@
     state: present
 
 - name: Allow 'wheel' group to have passwordless sudo
+  become: true
   lineinfile:
     dest: /etc/sudoers
     state: present
