--- a/tasks/debian.yml
+++ b/tasks/debian.yml
@@ -42,6 +42,7 @@
     autoremove: true
 
 - name: Allow 'sudo' group to have passwordless sudo
+  become: true
   lineinfile:
     dest: /etc/sudoers
     state: present
