--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -93,6 +93,7 @@
     - dnf
 
 - name: Allow 'wheel' group to have passwordless sudo
+  become: true
   lineinfile:
     dest: /etc/sudoers
     state: present
