--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,17 +1,22 @@
 ---
 # Provide a list of groups that should exist on any system.
 groups_to_create: []
-# - wheel
-# - sudo
+# - some_group
 
 # Provide a list of users that will have shells updated and have the public keys deployed to.
 users: []
-# - username: scott
-#   home_path: /home/scott
+# - name: scott
+#   admin: true
 #   groups:
-#     - wheel
-#     - sudo
-#     - scott
+#     - some_group
+
+# Administrative user groups
+admin_groups:
+  - sudo
+  - wheel
+
+# Allows `wheel` and `sudo` groups to have passwordless sudo permissions
+passwordless_admin: false
 
 # Provide local paths to public keys that should be deployed on the remote host
 ssh_public_keys: []
