--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -91,3 +91,15 @@
   tags:
     - yum
     - dnf
+
+- name: Allow 'wheel' group to have passwordless sudo
+  become: true
+  lineinfile:
+    dest: /etc/sudoers
+    state: present
+    regexp: "^%wheel"
+    line: "%wheel ALL=(ALL) NOPASSWD: ALL"
+    validate: "visudo -cf %s"
+  when: passwordless_admin
+  tags:
+    - groups
