--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -1,5 +1,5 @@
 ---
-- name: Upgrade all pacakges
+- name: Upgrade all packages
   community.general.pacman:
     update_cache: true
     upgrade: true
