--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -31,3 +31,9 @@ ultimate_vim_git_url: "https://github.com/amix/vimrc.git"
 
 # Local path to clone Ultimate VIM repo
 ultimate_vim_tmp_path: "/tmp/.vim_runtime"
+
+# Install and Configure Fish Shell
+config_fish: true
+
+# Install and Configure VIM
+config_vim: true
