Ignore errors installing neofetch since it's not required to get a server running. RHEL and CentOS packages have thrown errors lately.

--- a/tasks/arch.yml
+++ b/tasks/arch.yml
@@ -23,6 +23,7 @@
   community.general.pacman:
     name: neofetch
     state: present
+  ignore_errors: true
 
 - name: Install iSCSI
   community.general.pacman:
