--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -105,7 +105,7 @@
 
 - name: "Create authorized_keys file"
   become: true
-  authorized_key:
+  ansible.posix.authorized_key:
     user: "{{ item[0].name }}"
     state: present
     key: "{{ item[1] }}"
