--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -1,10 +1,16 @@
 ---
 
+- name: Fail if major version is less than 8
+  become: false
+  ansible.builtin.fail:
+    msg: The RHEL (derivative) version must be version 8 or higher
+  when: ansible_facts['ansible_distribution_major_version'] < 8
+
 - name: Download EPEL RPM key
   become: true
   ansible.builtin.rpm_key:
     state: present
-    key: http://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-8
+    key: "http://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ ansible_facts['ansible_distribution_major_version'] }}"
   when: ansible_facts['distribution'] != "OracleLinux"
   tags:
     - yum
@@ -19,7 +25,7 @@
     metalink: https://mirrors.fedoraproject.org/metalink?repo=epel-$releasever&arch=$basearch&infra=$infra&content=$contentdir
     enabled: true
     gpgcheck: true
-    gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-8
+    gpgkey: "file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-{{ ansible_facts['ansible_distribution_major_version'] }}"
   when: ansible_facts['distribution'] != "OracleLinux"
   tags:
     - yum
@@ -28,9 +34,9 @@
 - name: Enable EPEL Repo Oracle Linux
   become: true
   yum_repository:
-    name: ol8_developer_EPEL
+    name: oel_developer_EPEL
     description: Oracle Linux $releasever EPEL Packages for Development ($basearch)
-    baseurl: https://yum$ociregion.$ocidomain/repo/OracleLinux/OL8/developer/EPEL/$basearch/
+    baseurl: "https://yum$ociregion.$ocidomain/repo/OracleLinux/OL{{ ansible_facts['ansible_distribution_major_version'] }}/developer/EPEL/$basearch/"
     enabled: true
     gpgcheck: true
     gpgkey: file:///etc/pki/rpm-gpg/RPM-GPG-KEY-oracle
