--- a/.github/workflows/github-actions-ci.yml
+++ b/.github/workflows/github-actions-ci.yml
@@ -25,7 +25,7 @@ jobs:
 
     steps:
       - name: Install Ansible
-        run: pip3 install ansible ansible-runner ansible-navigator
+        run: pip3 install ansible ansible-runner ansible-navigator ansible-lint
 
       - name: Check out repository code
         uses: actions/checkout@v2
