Updates for Fedora differences

--- a/tasks/redhat.yml
+++ b/tasks/redhat.yml
@@ -4,19 +4,19 @@
   become: false
   ansible.builtin.fail:
     msg: The RHEL (derivative) version must be version 8 or higher
-  when: ansible_facts['distribution_major_version'] < 8
+  when: (ansible_facts['distribution_major_version'] | int) < 8
 
 - name: Download EPEL RPM key
   become: true
   ansible.builtin.rpm_key:
     state: present
     key: "http://dl.fedoraproject.org/pub/epel/RPM-GPG-KEY-EPEL-{{ ansible_facts['distribution_major_version'] }}"
-  when: ansible_facts['distribution'] != "OracleLinux"
+  when: ansible_facts['distribution'] != "OracleLinux" and ansible_facts['distribution'] != "Fedora"
   tags:
     - yum
     - dnf
 
-- name: Enable EPEL for RHEL and Clones
+- name: Enable EPEL for RHEL and RHEL clones
   become: true
   yum_repository:
     name: epel
@@ -26,7 +26,7 @@
     enabled: true
     gpgcheck: true
     gpgkey: "file:///etc/pki/rpm-gpg/RPM-GPG-KEY-EPEL-{{ ansible_facts['distribution_major_version'] }}"
-  when: ansible_facts['distribution'] != "OracleLinux"
+  when: ansible_facts['distribution'] != "OracleLinux" and ansible_facts['distribution'] != "Fedora"
   tags:
     - yum
     - dnf
